--- a/.cz.toml
+++ b/.cz.toml
@@ -1,7 +1,8 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.2.0"
+version = "0.2.1"
 tag_format = "$version"
 version_files = [
     "pyproject.toml:version"
 ]
+annotated_tag = true
